# regula-hub

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  alembic.ini  docker-compose.yml  pyproject.toml  readme.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
admin/: .dockerignore  Dockerfile  Dockerfile.dev  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
admin/tests/: setup.ts  test-utils.tsx
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_seed_form_metadata.py  003_cached_schedule_exports.py  004_cadsus_enrichment_cache.py  005_integration_executions.py  006_integration_mappings.py  007_add_department_address.py  008_integration_appointments.py
docker/: README.md
docker/seed/: credentials.enc.json
docs/: SOBRE_O_PROJETO.md
docs/architecture/: ARCHITECTURE_DIAGRAM.md
docs/audit/: QA_REPORT.md
docs/code-quality/: CODE_SMELLS_REPORT.md  ENGINEERING_GUIDELINES.md  REMEDIATION_PLAN.md  SECURITY_REPORT.md
docs/specs/: BACKEND_GUARDRAILS.md  BUSINESS_RULES.md  CONSTITUTION.md  TECH_SPEC.md
docs/workflows/: PROMOTION_FLOW.md
postman/: regula-hub.postman_collection.json
postman/environments/: local.postman_environment.json  staging.postman_environment.json
src/regulahub/: config.py  logging_config.py  main.py
tests/fixtures/: cadweb_result.html  export_schedule.csv  sisreg_detail.html  sisreg_listing.html
tests/unit/: test_auth_logging.py  test_cached_export_repository.py  test_cached_export_routes.py  test_cadsus_client.py  test_cadweb_parser.py  test_compat_auth.py  test_compat_integration.py  test_compat_routes.py  test_compat_schemas.py  (+25 more)
(+218 files in other folders)
